--- a/src/app/committees/bylaws/bylaws.component.html
+++ b/src/app/committees/bylaws/bylaws.component.html
@@ -1,10 +1,12 @@
 <div class="sidebar-container">
     <div class="not-sidebar">
-        <div class="section-header">By-Laws Committee</div>
-        <div class="paragraph-header">Leader: Rob Brewer</div>
+        <div class="section-header">Bylaws Committee</div>
+        <div class="paragraph-header">Leader: Veronica Sheives</div>
+        <div class="tiny-text">The Bylaws Committee is NOT an official WST HOA committee.</div>
         <p-divider></p-divider>
         <div class="paragraph-copy">
-            The By-Laws Committee is a temporary committee established specifically to update WST HOA By-Laws.
+            The Bylaws Committee is a temporary committee established by WSTAG specifically for the purpose of reviewing and updating the WST bylaws. 
+            
         </div>
         <p-divider></p-divider>
         <div class="paragraph-header">Participate</div>
