--- a/src/app/committees/events/events.component.html
+++ b/src/app/committees/events/events.component.html
@@ -2,14 +2,16 @@
     <div class="not-sidebar">
         <div class="section-header">Events Committee</div>
         <div class="paragraph-header">Leader: Theresa Cutright</div>
+        <div class="tiny-text">The Events Committee is an official WST HOA committee.</div>
         <p-divider></p-divider>
         <div class="paragraph-copy">
             The Events Committee is tasked with planning and implementing community events such as holiday parties and other social gatherings.
+            Each year we usually gather around the pool for July 4, Memorial Day and Halloween.
         </div>
         <p-divider></p-divider>
         <div class="paragraph-header">Volunteer</div>
         <div class="paragraph-copy">
-            The Events Committee ....  Log in and check the Forum to volunteer or get more information.
+            The Events Committee does not meet on any regular basis, but jumps into action when needed. For more information become a WSTAG member and join our WhatsApp Group.
         </div>
         <p-divider></p-divider>
         
