--- a/src/app/committees/landscape/landscape.component.html
+++ b/src/app/committees/landscape/landscape.component.html
@@ -2,15 +2,21 @@
     <div class="not-sidebar">
         <div class="section-header">Landscape Committee</div>
         <div class="paragraph-header">Leader: Seth Rodecker</div>
+        <div class="tiny-text">The Landscape Committee is an official WST HOA committee.</div>
         <p-divider></p-divider>
         <div class="paragraph-copy">
-            The Landscape Committee is tasked with planning and implementing 
+            This year has been especially productive for the Landscape Committee. 
+            We have a great team of people who have put in many hours of sweat planting, trimming, weeding and watering.
+        </div>
+        <div class="paragraph-copy">
+            Seth has been a fantastic committee leader for his first year, and has knowledge of plants and horticulture has been invaluable. 
         </div>
         <p-divider></p-divider>
         <div class="paragraph-header">Volunteer</div>
         <div class="paragraph-copy">
-            The Landscape Committee is a great place to meet new friends and come together for a common cause.  
-            Currently the committee is meeting about once a week on WEEKEND MORNINGS...  Log in and check the Forum to volunteer or get more information.
+            The Landscape Committee is a great place to meet new friends and come together for a both work and fun.
+            Currently the committee is meeting about once a week on weekend mornings.
+            For more information become a WSTAG member and join our WhatsApp Group.
         </div>
         <p-divider></p-divider>
         
