--- a/src/app/home/panel-bottom/panel-bottom.component.html
+++ b/src/app/home/panel-bottom/panel-bottom.component.html
@@ -6,20 +6,22 @@
       grant almost dictatorial powers to the President of the HOA. These bylaws
       were never intended to be permanent, and should have been updated in the
       early 1980's. As it stands now, there are loop holes and policies that
-      allow for the dishonest and corrupt collection of proxies that keep
-      corrupt boards in power. Please see the ByLaws section under Committees
-      for more information.
+      allow for the corrupt collection of proxies and other dishonest (but legal, as we are often reminded) actions that keep
+      corrupt boards in power. 
     </div>
 
     <div class="paragraph-copy">
-      Below is the opening paragraph to the current WST By-laws. As is obvious,
-      they were written by and for the original developer, not the homeowners.
-      They are therefore heavily skewed toward a powerful president rather than
-      a limited and accountable one.<br />
-      It is a the top priority of WSTAG to update the WST by-laws so homeowners
-      have a greater say in how their investment is managed.<br />
-      To participate in the process, sign in to your account and go to the
-      Forum.
+      It is the top priority of WSTAG to update the WST by-laws to prevent corrupt Boards from remaining in power to the detriment of our community.<br />
+    </div>
+
+    <div class="paragraph-copy">
+      <span class="black-16-550">Proposed changes to the Bylaws:</span> <br />
+      <ul>
+        <li>Limit the number of proxies any single owner may hold</li>
+        <li>Prevent the Board from removing officers without reason. Currently any three officers may gang up, remove any other board member, 
+          and replace them with a loyal "yes men" puppets, without any notification or input from the Members</li>
+        <li>Allow secure online voting so members do not need to be present at the annual meeting to vote</li>
+    </ul>
     </div>
   </div>
   <div class="sidebar200">
