--- a/src/app/home/panel-middle/panel-middle.component.html
+++ b/src/app/home/panel-middle/panel-middle.component.html
@@ -2,13 +2,12 @@
   <div class="not-sidebar">
     <div class="paragraph-header">About the WST Advocacy Group</div>
     <div class="paragraph-copy">
-      The Westbury Square Townhomes Advocacy Group exists to provide homeowners
-      with current, complete and accurate concerning the management, finances
-      and leadership of the HOA. The WST HOA Board of Directors works for, and
-      should be held accountable to the members of the Association (the
-      "Members"). The Westbury Square Townhomes Advocacy Group is dedicated to
-      providing WST homeowners with up-to-date and accurate information
-      concerning the HOA Board of Directors and other community events.
+      The WST HOA Board of Directors works for, and
+      should be held accountable to the members of the Association (the "Members"). Instead we have been ignored and cenored.
+      The WST Advocacy Group operates similar to a organized union for labor.  Each of us alone can be ignored.  
+      But together, working as a unified and organized force, we can be a positive force for change in our community.<br/>
+      The Westbury Square Townhomes Advocacy Group exists to provide Members with a means to make their voice heard, and to provide easily accessible 
+      iformation concerning the management, finances and leadership of the HOA.  <br>
     </div>
     <p-divider></p-divider>
   </div>
