--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -2,11 +2,20 @@
   <div class="not-sidebar">
     <div class="paragraph-header">Become a Member!</div>
     <div class="paragraph-copy">
-      All WST owners are welcome to join.  
+      All WST owners are welcome to join.  Together we can hold the Board accountable and put an end to the secretive, self-serving and corrupt board we've been under for far too long. Now is the time to make a difference.<br>
+      Click on the 'Members' button above and follow the instructions.
       <p-divider></p-divider>
-      <div class="paragraph-header">Become a Member!</div>
+      <div class="paragraph-header">WST/AG Top Priority</div>
+      <span>Update Bylaws and Rules and Regulations</span>
     <div class="paragraph-copy">
-      All WST owners are welcome to join.  
+      <ul>
+        <li>A limit to the number of proxies any one Member may hold</li>
+        <li>Board President and Officers must live on property</li>
+        <li>Update and clarify how violations are determined and the process by which they are administered</li>
+        <li>Let Marshall Management do their job they are being paid for.</li>
+        <li>Define how new technology such as Zoom board meetings and Social media should be utilized and what should be saved, archived, and/or shared with the community</li>
+        <li>Establish procedures for handling all digital assets including documents, photos, receipts, banking, passwords, security camera footage and other sensitive private digital assets</li>
+    </ul>
       <p-divider></p-divider>
     </div>
    
