--- a/src/app/users/resident-list/resident-list.component.html
+++ b/src/app/users/resident-list/resident-list.component.html
@@ -2,4 +2,9 @@
     <span>{{data.firstname + " " + data.lastname}}</span><br />
     <span class="small-black-text"></span> {{ data.email}}<br />
     <span class="small-black-text"></span> {{ data.cell }}<br />
+    <div class="edit-button" style="margin-top: 15px">
+        <p-button label="Edit" icon="pi pi-file-edit" styleClass="p-button-sm"
+          (click)="sendToParent(data.id)"
+        ></p-button>
+      </div>
 </div>
