--- a/src/app/users/vehicle-list/vehicle-list.component.html
+++ b/src/app/users/vehicle-list/vehicle-list.component.html
@@ -12,3 +12,8 @@
     <span class="small-black-text">Color:</span>
     {{ data.color }}
   </div>
+  <div class="edit-button" style="margin-top: 15px">
+    <p-button label="Edit" icon="pi pi-file-edit" styleClass="p-button-sm"
+      (click)="sendToParent(data.space)"
+    ></p-button>
+  </div>
