--- a/src/styles-type.scss
+++ b/src/styles-type.scss
@@ -81,10 +81,10 @@
   font-weight: 500;
 }
 
-.tiny-text-yellow {
+.tiny-text-green {
   font-size: 14px;
   margin: 0;
-  color: rgb(245, 233, 65);
+  color:#14b8a6;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
 }
