--- a/src/app/committees/hospitality/hospitality.component.html
+++ b/src/app/committees/hospitality/hospitality.component.html
@@ -2,14 +2,15 @@
     <div class="not-sidebar">
         <div class="section-header">Hospitality Committee</div>
         <div class="paragraph-header">Leader: Vacant</div>
+        <div class="tiny-text">The Hospitality Committee is an official WST HOA committee.</div>
         <p-divider></p-divider>
         <div class="paragraph-copy">
-            The Hospitality Committee is tasked with welcoming new residents to the community and...
+            The Hospitality Committee is tasked with welcoming new residents to the community and providing them with a Welcome Packet, answering questions and showing them around the property.
         </div>
         <p-divider></p-divider>
         <div class="paragraph-header">Volunteer</div>
         <div class="paragraph-copy">
-            The Hospitality Committee .... Log in and check the Forum to volunteer or get more information.
+            For more information become a WSTAG member and join our WhatsApp Group.
         </div>
         <p-divider></p-divider>
         
