--- a/src/app/users/account/account.component.html
+++ b/src/app/users/account/account.component.html
@@ -21,18 +21,18 @@
         <div class="p-fluid">
           <div class="p-field">
 
-            <label for="firstName">First Name</label>
-            <input type="text" id="firstName" formControlName="firstName" pInputText class="p-inputtext-sm">
+            <label for="firstname">First Name</label>
+            <input type="text" id="firstName" formControlName="firstname" pInputText class="p-inputtext-sm">
 
-            <small *ngIf="form.get('firstName')?.invalid && form.get('firstName')?.touched" class="p-error">
+            <small *ngIf="form.get('firstname')?.invalid && form.get('firstname')?.touched" class="p-error">
               First Name is required.
             </small>
           </div>
 
           <div class="p-field">
-            <label for="lastName">Last Name</label>
-            <input type="text" id="lastName" formControlName="lastName" pInputText class="p-inputtext-sm">
-            <small *ngIf="form.get('lastName')?.invalid && form.get('lastName')?.touched" class="p-error">
+            <label for="lastname">Last Name</label>
+            <input type="text" id="lastname" formControlName="lastname" pInputText class="p-inputtext-sm">
+            <small *ngIf="form.get('lastname')?.invalid && form.get('lastname')?.touched" class="p-error">
               Last Name is required.
             </small>
           </div>
@@ -46,9 +46,9 @@
           </div>
 
           <div class="p-field">
-            <label for="city">City, State, Zip</label>
-            <input type="text" id="city" formControlName="city" pInputText class="p-inputtext-sm">
-            <small *ngIf="form.get('city')?.invalid && form.get('city')?.touched" class="p-error">
+            <label for="csz">City, State, Zip</label>
+            <input type="text" id="csz" formControlName="csz" pInputText class="p-inputtext-sm">
+            <small *ngIf="form.get('csz')?.invalid && form.get('csz')?.touched" class="p-error">
               City, State, Zip is required.
             </small>
           </div>
@@ -61,17 +61,16 @@
             </small>
           </div>
 
-          <div class="p-field">
-            <label for="email">Email</label>
-            <input type="email" id="email" formControlName="email" pInputText class="p-inputtext-sm">
+          <div class="flex-column">
+            <button type="submit" pButton label="Submit" [disabled]="form.invalid"></button>
+            <p-button label="Cancel" styleClass="p-button-warning"  (click)="hideUpdateForm()"></p-button>
           </div>
-
-          <button type="submit" pButton label="Submit" [disabled]="form.invalid"></button>
-          <button type="button" pButton label="Cancel" style="margin-top:10px" styleClass="p-button-warning"
-          (click)="hideUpdateForm()"></button>
         </div>
+        
       </form>
 
     </div>
   </div>
 </div>
+
+
