--- a/src/app/users/account/account.component.html
+++ b/src/app/users/account/account.component.html
@@ -1,13 +1,13 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
-    <div class="section-header">User / Owner</div>
+    <div class="section-header">Owner</div>
     <div *ngIf="display == 'data'">
     <div class="small-black-14" style="margin-top: 15px" *ngIf="userAccount.id > 0"><div>
         <span class="small-black-text"></span>{{ userAccount.firstname }} {{ userAccount.lastname }}<br />
-        <span class="small-black-text">Street: </span>{{ userAccount.street}}<br />
-        <span class="small-black-text">City: </span>{{ userAccount.csz }}<br />
-        <span class="small-black-text">Cell: </span>{{ userAccount.cell }}<br />
-        <span class="small-black-text">Email: </span>{{ userAccount.email}}<br />
+        <span class="small-black-text"></span>{{ userAccount.street}}<br />
+        <span class="small-black-text"></span>{{ userAccount.csz }}<br />
+        <span class="small-black-text"></span>{{ userAccount.cell }}<br />
+        <span class="small-black-text"></span>{{ userAccount.email}}<br />
       </div>
       <div class="edit-button" style="margin-top: 15px">
         <p-button label="Edit" icon="pi pi-file-edit" styleClass="p-button-sm"
