--- a/src/app/users/signin/signin.component.html
+++ b/src/app/users/signin/signin.component.html
@@ -1,5 +1,6 @@
-<div class="page-content">
-  <h2>{{ pageTitle }}</h2>
+<div class="page-content" *ngIf="loginMode !='PW'">
+ 
+  <div class="section-header">{{ pageTitle }}</div>
   <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <span class="black12">Email</span>
@@ -9,9 +10,30 @@
       <span class="black12">Password</span>
       <input type="password" pInputText formControlName="password" />
     </div>
-    <button type="submit" pButton label="Login"></button>
+    <button type="submit" pButton label="Submit"></button>
   </form>
 
- <div>
-  <p-button label="Change/Forgot Password" styleClass="p-button-link"></p-button>
- </div>
+  <div>
+    <p-button label="Change/Forgot Password" styleClass="p-button-link" (click)="showPasswordRestForm()"></p-button>
+  </div>
+</div>
+
+<div class="page-content" *ngIf="loginMode =='PW'">
+  <div class="section-header">{{ pageTitle }}</div>
+  <form [formGroup]="resetForm" (ngSubmit)="onSubmitPassword()">
+    <div class="form-group">
+      <span class="black12">Email</span>
+      <input type="text" pInputText formControlName="email" />
+    </div>
+    <div class="form-group">
+      <span class="black12">New Password</span>
+      <input type="text" pInputText formControlName="password" />
+    </div>
+    <button type="submit" pButton label="Submit"></button>
+  </form>
+
+  <div>
+    <p-button label="Cancel" styleClass="p-button-link" (click)="hidePasswordRestForm()"></p-button>
+  </div>
+
+</div>
