--- a/src/app/home/panel-middle/panel-middle.component.html
+++ b/src/app/home/panel-middle/panel-middle.component.html
@@ -5,8 +5,8 @@
       The WST HOA Board of Directors works for, and
       should be held accountable to the members of the Association (the "Members"). Instead we have been ignored and cenored. 
       Every meeting this Board has is a closed Executive session in which we have no say and are not allowed to be a part of. No minutes recorded. 
-      Zoom meeting recording are "lost" if one asks to see them.
-      The WST Advocacy Group may be dcompareds to an organized union for labor.  Each of us alone can be ignored.  
+      Zoom meeting recording are "lost" if one asks to see them.<br/>
+      The WST Advocacy Group may be compared to an organized union for labor.  Each of us alone can be ignored.  
       But together, working as a unified and organized group, we can be a positive force for change in our community.<br/>
       The Westbury Square Townhomes Advocacy Group exists to provide Members with a means to make their voice heard, and to provide easily accessible 
       information concerning the management, finances and leadership of the HOA.  <br>
