--- a/src/app/hoa/meetings/meetings.component.html
+++ b/src/app/hoa/meetings/meetings.component.html
@@ -1,4 +1,5 @@
 <div class="section-header">Minutes from the Meetings of the Board of Directors</div>
+<span>We currently have no coopreration from the board to publish meeting minutes.</span>
 <p-divider></p-divider>
 <p-table [value]="meetings" [tableStyle]="{ 'min-width': '50rem' }">
     <ng-template pTemplate="header">
