--- a/src/app/hoa/members/members.component.html
+++ b/src/app/hoa/members/members.component.html
@@ -26,5 +26,5 @@
 <p-divider></p-divider>
 <div class="paragraph-header">At-Large</div>
 <div class="paragraph-copy">
-  Vacant
+  Arlin Cameron
 </div>
