--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
       <p-tabPanel header="About">
         <app-panel-middle></app-panel-middle>
       </p-tabPanel>
-      <p-tabPanel header="By-Laws">
+      <p-tabPanel header="Petition">
         <app-panel-bottom></app-panel-bottom>
       </p-tabPanel>
     </p-tabView>
