--- a/src/app/home/panel-bottom/panel-bottom.component.html
+++ b/src/app/home/panel-bottom/panel-bottom.component.html
@@ -1,28 +1,29 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
-    <div class="paragraph-header">By-Laws Update</div>
-    <div class="paragraph-copy">
-      The ByLaws for WST were written in 1979 by the building contractor, and
-      grant almost dictatorial powers to the President of the HOA. These bylaws
-      were never intended to be permanent, and should have been updated in the
-      early 1980's. As it stands now, there are loop holes and policies that
-      allow for the corrupt collection of proxies and other dishonest (but legal, as we are often reminded) actions that keep
-      corrupt boards in power. 
-    </div>
 
     <div class="paragraph-copy">
-      It is the top priority of WSTAG to update the WST by-laws to prevent corrupt Boards from remaining in power to the detriment of our community.<br />
+      At this time, it is the top priority of WSTAG to update the WST by-laws so as to prevent the unscrupulous collection of voting proxies by any one individual.
+      The current Board is unwilling to make these changes (among many other failures), and must therefore be removed by petition before we can more forward.
+      <br />
     </div>
-
+    <div class="paragraph-header">Petition for a Special Meeting</div>
     <div class="paragraph-copy">
-      <span class="black-16-550">Proposed changes to the Bylaws:</span> <br />
-      <ul>
-        <li>Limit the number of proxies any single owner may hold</li>
-        <li>Prevent the Board from removing officers without reason. Currently any three officers may gang up, remove any other board member, 
-          and replace them with a loyal "yes men" puppets, without any notification or input from the Members</li>
-        <li>Allow secure online voting so members do not need to be present at the annual meeting to vote</li>
-    </ul>
+     Please understand!  The petition alone does not remove the current board members named in the petition, it only calls for a Special Meeting to vote on the issue.  Our by-laws require 1/3 of all Members to sign.
+     Once the requirements are met, the board <b >must</b> hold the meeting. Just as in regular annual meetings, a quorum is required and the vote must be at 
+     least 51% of the voting members present to pass.
     </div>
+    
+     <div class="paragraph-header">Voting Proxies at the Special Meeting</div>
+     <div class="paragraph-copy">
+      Signing the petition is just the first step.  You must also show up at the meeting and vote.  However, we can use the same tactic that has been so effectively used against us all these years 
+      to win back the Board.  If you are unable to attend, you can sign your vote over to another member by proxie.  Instructions and forms for doing this will be available 
+      once the meeting date has been set.
+     </div>
+    
+     <div class="paragraph-header">Never Again</div>
+     <div class="paragraph-copy">
+      After we are successful,....?
+     </div>
   </div>
   <div class="sidebar200">
     <img class="images" src="assets\images\IMG_4003.jpg" />
