--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -2,19 +2,20 @@
   <div class="not-sidebar">
     <div class="paragraph-header">Become a Member!</div>
     <div class="paragraph-copy">
-      All WST owners are welcome to join.  Together we can hold the Board accountable and put an end to the secretive, self-serving and corrupt board we've been under for far too long. Now is the time to make a difference.<br>
+      All WST owners are welcome to join.  Together we can hold the Board accountable and put an end to the secretive, self-serving and corrupt boards that have been a hallmark of the past decade.
+      Many of you are so sick and tired of the political drama you've simply given up and don't care anymore - don't want to be involved.  But now is the time to make a difference. 
+      Two can play at this game.  We plan to use the exact same method of collecting proxies to gain back power, but rather than using that power for self-serving puroposes we will immediately update 
+      the Bylaws so that it can never happen again in the future.  Lets fix this problem once and for all. We can do this!<br>
       Click on the 'Members' button above and follow the instructions.
       <p-divider></p-divider>
-      <div class="paragraph-header">WST/AG Top Priority</div>
-      <span>Update Bylaws and Rules and Regulations</span>
+      <div class="paragraph-header">Update Bylaws</div>
+      <span>The following three changes to the by-laws will eliminate the corruption and allow for a greatest participation of all our Members in the governing process.</span>
     <div class="paragraph-copy">
       <ul>
-        <li>A limit to the number of proxies any one Member may hold</li>
-        <li>Board President and Officers must live on property</li>
-        <li>Update and clarify how violations are determined and the process by which they are administered</li>
-        <li>Let Marshall Management do their job they are being paid for.</li>
-        <li>Define how new technology such as Zoom board meetings and Social media should be utilized and what should be saved, archived, and/or shared with the community</li>
-        <li>Establish procedures for handling all digital assets including documents, photos, receipts, banking, passwords, security camera footage and other sensitive private digital assets</li>
+        <li>Limit the number of proxies any single owner may hold</li>
+        <li>Prevent the Board from removing officers without reason. Currently any three officers may gang up, remove any other board member, 
+          and replace them with a loyal "yes men" puppets, without any notification or input from the Members</li>
+        <li>Allow secure online voting so members do not need to be present at the annual meeting to vote</li>
     </ul>
       <p-divider></p-divider>
     </div>
