--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -3,20 +3,22 @@
     <div class="paragraph-header">Become a Member!</div>
     <div class="paragraph-copy">
       All WST owners are welcome to join.  Together we can hold the Board accountable and put an end to the secretive, self-serving and corrupt boards that have been a hallmark of the past decade.
-      Many of you are so sick and tired of the political drama you've simply given up and don't care anymore - don't want to be involved.  But now is the time to make a difference. 
-      Two can play at this game.  We plan to use the exact same method of collecting proxies to gain back power, but rather than using that power for self-serving puroposes we will immediately update 
-      the Bylaws so that it can never happen again in the future.  Lets fix this problem once and for all. We can do this!<br>
+      Many of you are sick and tired of the political drama that you have simply given up. You have no interest to be involved or participate within our community.  <br>
+      THIS IS THE TIME TO MAKE A DIFFERENCE!<br>
+      We plan to use the exact same method of collecting proxies to gain back power, but rather than using that power for self-serving puroposes we will immediately update 
+      the Bylaws so it never happens again.  Lets fix this problem once and for all. We can do this!<br>
       Click on the 'Members' button above and follow the instructions.
       <p-divider></p-divider>
       <div class="paragraph-header">Update Bylaws</div>
-      <span>The following three changes to the by-laws will eliminate the corruption and allow for a greatest participation of all our Members in the governing process.</span>
+      <span>The following three changes to the by-laws will eliminate the corruption and allow for a greatest participation of all our Members in the election process.</span>
     <div class="paragraph-copy">
       <ul>
         <li>Limit the number of proxies any single owner may hold</li>
-        <li>Prevent the Board from removing officers without reason. Currently any three officers may gang up, remove any other board member, 
-          and replace them with a loyal "yes men" puppets, without any notification or input from the Members</li>
+        <li>Prevent the Board from removing officers without reason. Currently any three officers may remove any another board member, 
+          and replace them with an unelected appointee without any notification or input from the Members</li>
         <li>Allow secure online voting so members do not need to be present at the annual meeting to vote</li>
     </ul>
+      There are many other instances in our bylawys where the language is vague, outdated and 
       <p-divider></p-divider>
     </div>
    
