--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,7 +3,10 @@
 </div>
 
 <div class="sidebar-container" *ngIf="userAuthenticated == true">
+
   <div class="not-sidebar">
+    As the current official WST website leaves much to be desired, this site may also serve as an altrnative to update owner information 
+    and submit other forms such as maintenance work orders.
     <p-tabView>
       <p-tabPanel header="Account">
        <app-account></app-account>
@@ -13,6 +16,9 @@
       </p-tabPanel>
       <p-tabPanel header="Vehicles">
         <app-vehicles></app-vehicles>
+      </p-tabPanel>
+      <p-tabPanel header="Forms">
+       Still to come.
       </p-tabPanel>
     </p-tabView>
   </div>
